weird wrapping in Firefox of tiles. Fixed height of topics div to 305px to fix problem. May need to address later on if want more than six topics to show or have 5 or 6 topics with one being two rows

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,15 +1,18 @@
 /* 
 set all parent elements' height to allow for percentage height of children 
 .ng-scope is class of ng-view
-*/
+
 html, body, .ngview-window, .container {
     height: 100%;
 }
 .topics-row {
     height: 40%;
+    
 }
+*/
 .topics-col {
-    height: 100%;
+/*    height: 100%;*/
+    height: 305px;
 }
 
 .subtopic {
